# s3-fileserver-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.Development.yml  docker-compose.yml
.github/workflows/: build.yml
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/routes/[...path]/: +page.svelte  +page.ts
src/: cache.rs  main.rs  s3_route.rs
