[package]
name = "s3-fileserver"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = { version = "0.6.5", features = ["tokio-uring"] }
actix-multipart = "0.6.1"
actix-web = "4.5.1"
anyhow = "1.0.81"
chrono = { version = "0.4.37", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
once_cell = "1.19.0"
redis = "0.25.3"
regex = "1.10.4"
rust-s3 = "0.34.0-rc4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
url = "2.5.0"

[build-dependencies]
built = { version = "0.7.1", features = ["chrono", "git2"] }
